objects/Track__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Track_list__c</fullName>
        <label>Track list</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Track_number__c</fullName>
        <label>Track number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Track</label>
    <nameField>
        <label>Track Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tracks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>